--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@ description: Collecting All Causal Knwoledge
         <h1>Collecting All Causal Knwoledge</h1>
         <div>
             <p>
-                The CauseNet Group aims at creating a causal knowledge base that comprises all human causal knowledge and to separate it from mere causal beliefs, with the goal of enabling large-scale research into causal inference.
+                CauseNet aims at creating a causal knowledge base that comprises all human causal knowledge and to separate it from mere causal beliefs, with the goal of enabling large-scale research into causal inference.
             </p>
             <p><button href="{{ '/research.html' | relative_url }}" class="uk-button uk-button-primary" disabled>Learn More</a></button>
         </div>
     </div>
 </main>
 
-<div class="uk-section uk-section-default">
-    <div class="uk-container">
-        <!-- Space for imagination -->
-    </div>
-</div>
+
