--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 layout: default
 nav_active: index
 title: CauseNet
-description: Collecting All Causal Knwoledge
+description: Collecting All Causal Knowledge
 ---
 
 <main class="uk-section uk-cover-container index-main-cover">
     <div class="cover-background-fade"></div>
     <div class="uk-container uk-position-bottom uk-light uk-padding">
-        <h1>Collecting All Causal Knwoledge</h1>
+        <h1>Collecting All Causal Knowledge</h1>
         <div>
             <p>
                 CauseNet aims at creating a causal knowledge base that comprises all human causal knowledge and to separate it from mere causal beliefs, with the goal of enabling large-scale research into causal inference.
