--- a/publications.html
+++ b/publications.html
@@ -2,7 +2,7 @@
 layout: default
 nav_active: publications
 title: Webis Publications
-description: Publications by the Webis group
+description: Publications related to CauseNet
 ---
 
 <main class="uk-section uk-section-default">
@@ -14,7 +14,7 @@ description: Publications by the Webis group
 </div>
 
 <div class="uk-container uk-margin-medium publications-list">
-{% include bib-webis.html %}
+{% include bib-causenet.html %}
 
 <div id="filtered-all-message" class="uk-hidden uk-text-muted" aria-hidden="true">
 None of our publications match your filter.
